@@ -1956,18 +1956,10 @@ Node version.
 
 
 [float]
-== node_stats Fields
+== node.stats Fields
 
 node_stats
 
-
-
-[float]
-=== elasticsearch.node_stats.name
-
-type: keyword
-
-Node name.
 
 
 [float]
@@ -1978,7 +1970,7 @@ Node indices stats
 
 
 [float]
-=== elasticsearch.node_stats.indices.docs.count
+=== elasticsearch.node.stats.indices.docs.count
 
 type: long
 
@@ -1986,7 +1978,7 @@ Total number of existing documents.
 
 
 [float]
-=== elasticsearch.node_stats.indices.docs.deleted
+=== elasticsearch.node.stats.indices.docs.deleted
 
 type: long
 
@@ -1994,7 +1986,7 @@ Total number of deleted documents.
 
 
 [float]
-=== elasticsearch.node_stats.indices.segments.count
+=== elasticsearch.node.stats.indices.segments.count
 
 type: long
 
@@ -2002,7 +1994,7 @@ Total number of segments.
 
 
 [float]
-=== elasticsearch.node_stats.indices.segments.memory.bytes
+=== elasticsearch.node.stats.indices.segments.memory.bytes
 
 type: long
 
@@ -2012,7 +2004,7 @@ Total size of segments in bytes.
 
 
 [float]
-=== elasticsearch.node_stats.indices.store.size.bytes
+=== elasticsearch.node.stats.indices.store.size.bytes
 
 type: long
 
@@ -2034,7 +2026,7 @@ Old memory pool stats.
 
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.old.max.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.old.max.bytes
 
 type: long
 
@@ -2043,7 +2035,7 @@ format: bytes
 Max bytes.
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.old.peak.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.old.peak.bytes
 
 type: long
 
@@ -2052,7 +2044,7 @@ format: bytes
 Peak bytes.
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.old.peak_max.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.old.peak_max.bytes
 
 type: long
 
@@ -2061,7 +2053,7 @@ format: bytes
 Peak max bytes.
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.old.used.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.old.used.bytes
 
 type: long
 
@@ -2077,7 +2069,7 @@ Young memory pool stats.
 
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.young.max.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.young.max.bytes
 
 type: long
 
@@ -2086,7 +2078,7 @@ format: bytes
 Max bytes.
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.young.peak.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.young.peak.bytes
 
 type: long
 
@@ -2095,7 +2087,7 @@ format: bytes
 Peak bytes.
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.young.peak_max.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.young.peak_max.bytes
 
 type: long
 
@@ -2104,7 +2096,7 @@ format: bytes
 Peak max bytes.
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.young.used.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.young.used.bytes
 
 type: long
 
@@ -2120,7 +2112,7 @@ Survivor memory pool stats.
 
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.survivor.max.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.survivor.max.bytes
 
 type: long
 
@@ -2129,7 +2121,7 @@ format: bytes
 Max bytes.
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.survivor.peak.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.survivor.peak.bytes
 
 type: long
 
@@ -2138,7 +2130,7 @@ format: bytes
 Peak bytes.
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.survivor.peak_max.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.survivor.peak_max.bytes
 
 type: long
 
@@ -2147,7 +2139,7 @@ format: bytes
 Peak max bytes.
 
 [float]
-=== elasticsearch.node_stats.jvm.mem.pools.survivor.used.bytes
+=== elasticsearch.node.stats.jvm.mem.pools.survivor.used.bytes
 
 type: long
 
@@ -2170,14 +2162,14 @@ Old collection gc.
 
 
 [float]
-=== elasticsearch.node_stats.jvm.gc.collectors.old.collection.count
+=== elasticsearch.node.stats.jvm.gc.collectors.old.collection.count
 
 type: long
 
 
 
 [float]
-=== elasticsearch.node_stats.jvm.gc.collectors.old.collection.ms
+=== elasticsearch.node.stats.jvm.gc.collectors.old.collection.ms
 
 type: long
 
@@ -2191,14 +2183,14 @@ Young collection gc.
 
 
 [float]
-=== elasticsearch.node_stats.jvm.gc.collectors.young.collection.count
+=== elasticsearch.node.stats.jvm.gc.collectors.young.collection.count
 
 type: long
 
 
 
 [float]
-=== elasticsearch.node_stats.jvm.gc.collectors.young.collection.ms
+=== elasticsearch.node.stats.jvm.gc.collectors.young.collection.ms
 
 type: long
 
