@@ -9,10 +9,6 @@ import (
 	"github.com/elastic/beats/metricbeat/mb"
 )
 
-const (
-	defaultType = "metricsets"
-)
-
 // EventBuilder is used for building MetricSet events. MetricSets generate a
 // data in the form of a common.MapStr. This builder transforms that data into
 // a complete event and applies any Module-level filtering.
@@ -38,8 +34,6 @@ func (b EventBuilder) Build() (common.MapStr, error) {
 	}
 
 	// Get and remove meta fields from the event created by the MetricSet.
-	indexName := getIndex(event, "")
-	typeName := getType(event, defaultType)
 	timestamp := getTimestamp(event, common.Time(b.StartTime))
 
 	// Apply filters.
@@ -49,16 +43,13 @@ func (b EventBuilder) Build() (common.MapStr, error) {
 		}
 	}
 
-	// Checks if additional meta information is provided by the MetricSet under the key ModuleData
-	// This is based on the convention that each MetricSet can provide module data under the key ModuleData
-	moduleData, moudleDataExists := event[mb.ModuleData]
-	if moudleDataExists {
-		delete(event, mb.ModuleData)
-	}
-
 	metricsetData := common.MapStr{
 		"module": b.ModuleName,
 		"name":   b.MetricSetName,
+	}
+	// Adds host name to event.
+	if b.Host != "" {
+		metricsetData["host"] = b.Host
 	}
 	if b.FetchDuration != 0 {
 		metricsetData["rtt"] = b.FetchDuration.Nanoseconds() / int64(time.Microsecond)
@@ -67,38 +58,36 @@ func (b EventBuilder) Build() (common.MapStr, error) {
 	namespace := b.MetricSetName
 	if n, ok := event["_namespace"]; ok {
 		delete(event, "_namespace")
-		namespace = n.(string)
-		// TODO: check if namespace does not already exist
+		if ns, ok := n.(string); ok {
+			namespace = ns
+		}
+
 		metricsetData["namespace"] = namespace
+	}
+
+	// Checks if additional meta information is provided by the MetricSet under the key ModuleData
+	// This is based on the convention that each MetricSet can provide module data under the key ModuleData
+	moduleData, moudleDataExists := event[mb.ModuleDataKey]
+	if moudleDataExists {
+		delete(event, mb.ModuleDataKey)
+	}
+
+	moduleEvent := common.MapStr{}
+	moduleEvent.Put(namespace, event)
+
+	// In case meta data exists, it is added on the module level
+	// This is mostly used for shared fields across multiple metricsets in one module
+	if moudleDataExists {
+		if data, ok := moduleData.(common.MapStr); ok {
+			moduleEvent.DeepUpdate(data)
+		}
 	}
 
 	event = common.MapStr{
 		"@timestamp":            timestamp,
-		"type":                  typeName,
 		common.EventMetadataKey: b.metadata,
-		b.ModuleName: common.MapStr{
-			namespace: event,
-		},
-		"metricset": metricsetData,
-	}
-
-	// In case meta data exists, it is added on the module level
-	if moudleDataExists {
-		if _, ok := moduleData.(common.MapStr); ok {
-			event[b.ModuleName].(common.MapStr).Update(moduleData.(common.MapStr))
-		}
-	}
-
-	// Overwrite default index if set.
-	if indexName != "" {
-		event["beat"] = common.MapStr{
-			"index": indexName,
-		}
-	}
-
-	// Adds host name to event.
-	if b.Host != "" {
-		event["metricset"].(common.MapStr)["host"] = b.Host
+		b.ModuleName:            moduleEvent,
+		"metricset":             metricsetData,
 	}
 
 	// Adds error to event in case error happened
@@ -109,33 +98,6 @@ func (b EventBuilder) Build() (common.MapStr, error) {
 	}
 
 	return event, nil
-}
-
-func getIndex(event common.MapStr, indexName string) string {
-	// Set index from event if set
-
-	if _, ok := event["index"]; ok {
-		indexName, ok = event["index"].(string)
-		if !ok {
-			logp.Err("Index couldn't be overwritten because event index is not string")
-		}
-		delete(event, "index")
-	}
-	return indexName
-}
-
-func getType(event common.MapStr, typeName string) string {
-
-	// Set type from event if set
-	if _, ok := event["type"]; ok {
-		typeName, ok = event["type"].(string)
-		if !ok {
-			logp.Err("Type couldn't be overwritten because event type is not string")
-		}
-		delete(event, "type")
-	}
-
-	return typeName
 }
 
 func getTimestamp(event common.MapStr, timestamp common.Time) common.Time {
