@@ -76,8 +76,7 @@ func ExampleWrapper() {
 	//     "module": "fake",
 	//     "name": "eventfetcher",
 	//     "rtt": 111
-	//   },
-	//   "type": "metricsets"
+	//   }
 	// }
 }
 
