@@ -15,7 +15,7 @@ func eventsMapping(cpuStatsList []CPUStats) []common.MapStr {
 
 func eventMapping(stats *CPUStats) common.MapStr {
 	event := common.MapStr{
-		mb.ModuleData: common.MapStr{
+		mb.ModuleDataKey: common.MapStr{
 			"container": stats.Container.ToMapStr(),
 		},
 		"core": stats.PerCpuUsage,
