@@ -15,7 +15,7 @@ func eventsMapping(blkioStatsList []BlkioStats) []common.MapStr {
 
 func eventMapping(stats *BlkioStats) common.MapStr {
 	event := common.MapStr{
-		mb.ModuleData: common.MapStr{
+		mb.ModuleDataKey: common.MapStr{
 			"container": stats.Container.ToMapStr(),
 		},
 		"reads":  stats.reads,
