@@ -15,7 +15,7 @@ func eventsMapping(memoryDataList []MemoryData) []common.MapStr {
 
 func eventMapping(memoryData *MemoryData) common.MapStr {
 	event := common.MapStr{
-		mb.ModuleData: common.MapStr{
+		mb.ModuleDataKey: common.MapStr{
 			"container": memoryData.Container.ToMapStr(),
 		},
 		"fail": common.MapStr{
