@@ -9,85 +9,85 @@
             "name": "elasticsearch"
         },
         "node": {
-            "name": "OIBwp_5vSAG16PyX6B4eUA"
-        },
-        "node_stats": {
-            "indices": {
-                "docs": {
-                    "count": 2,
-                    "deleted": 0
-                },
-                "segments": {
-                    "count": 2,
-                    "memory": {
-                        "bytes": 3476
-                    }
-                },
-                "store": {
-                    "size": {
-                        "bytes": 8078
-                    }
-                }
-            },
-            "jvm": {
-                "gc": {
-                    "collectors": {
-                        "old": {
-                            "collection": {
-                                "count": 1,
-                                "ms": 71
-                            }
-                        },
-                        "young": {
-                            "collection": {
-                                "count": 4,
-                                "ms": 193
-                            }
+            "name": "8zgOwJ24TMamDDH9amWINQ",
+            "stats": {
+                "indices": {
+                    "docs": {
+                        "count": 0,
+                        "deleted": 0
+                    },
+                    "segments": {
+                        "count": 0,
+                        "memory": {
+                            "bytes": 0
+                        }
+                    },
+                    "store": {
+                        "size": {
+                            "bytes": 0
                         }
                     }
                 },
-                "mem": {
-                    "pools": {
-                        "old": {
-                            "max": {
-                                "bytes": 362414080
+                "jvm": {
+                    "gc": {
+                        "collectors": {
+                            "old": {
+                                "collection": {
+                                    "count": 1,
+                                    "ms": 80
+                                }
                             },
-                            "peak": {
-                                "bytes": 16151432
-                            },
-                            "peak_max": {
-                                "bytes": 362414080
-                            },
-                            "used": {
-                                "bytes": 16151432
+                            "young": {
+                                "collection": {
+                                    "count": 4,
+                                    "ms": 151
+                                }
                             }
-                        },
-                        "survivor": {
-                            "max": {
-                                "bytes": 17432576
+                        }
+                    },
+                    "mem": {
+                        "pools": {
+                            "old": {
+                                "max": {
+                                    "bytes": 362414080
+                                },
+                                "peak": {
+                                    "bytes": 20109096
+                                },
+                                "peak_max": {
+                                    "bytes": 362414080
+                                },
+                                "used": {
+                                    "bytes": 20109096
+                                }
                             },
-                            "peak": {
-                                "bytes": 17432568
+                            "survivor": {
+                                "max": {
+                                    "bytes": 17432576
+                                },
+                                "peak": {
+                                    "bytes": 17432576
+                                },
+                                "peak_max": {
+                                    "bytes": 17432576
+                                },
+                                "used": {
+                                    "bytes": 17432560
+                                }
                             },
-                            "peak_max": {
-                                "bytes": 17432576
-                            },
-                            "used": {
-                                "bytes": 17432568
-                            }
-                        },
-                        "young": {
-                            "max": {
-                                "bytes": 139591680
-                            },
-                            "peak": {
-                                "bytes": 139591680
-                            },
-                            "peak_max": {
-                                "bytes": 139591680
-                            },
-                            "used": {
-                                "bytes": 136064336
+                            "young": {
+                                "max": {
+                                    "bytes": 139591680
+                                },
+                                "peak": {
+                                    "bytes": 139591680
+                                },
+                                "peak_max": {
+                                    "bytes": 139591680
+                                },
+                                "used": {
+                                    "bytes": 98778408
+                                }
                             }
                         }
                     }
@@ -99,7 +99,7 @@
         "host": "127.0.0.1:9200",
         "module": "elasticsearch",
         "name": "node_stats",
+        "namespace": "node.stats",
         "rtt": 115
-    },
-    "type": "metricsets"
+    }
 }
